--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Doge Rentals</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+<body class="body">
+<a href="admin.html"><img src="images/image%20(1).jpg" alt="adminAvatar" id="adminAvatar"></a>
+<h1>Doge Rentals oo</h1>
+<h3>Admin</h3>
+<header>
+    <a href="dogs.html"><input type="button" id ="Dogs" value = "Doges" class="buttonIndex" onclick=></a>
+    <input type="button" id="bookingButton" value="Bookings" class="buttonIndex">
+    <a href="contact.html"><input type="button" id ="contactButton" value ="Map" class="buttonIndex"></a>
+    <input type="button" id="reviewsButton" value="Reviews" class="buttonIndex">
+</header>
 </body>
 </html>
