Minor style changes (buttons floating in center)

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <h1>Doge Rentals oo</h1>
 <h3>Admin</h3>
 <header>
-    <a href="dogs.html"><input type="button" id ="Dogs" value = "Doges" class="buttonIndex" onclick=></a>
-    <input type="button" id="bookingButton" value="Bookings" class="buttonIndex">
-    <a href="contact.html"><input type="button" id ="contactButton" value ="Map" class="buttonIndex"></a>
-    <input type="button" id="reviewsButton" value="Reviews" class="buttonIndex">
+    <div id = "table">
+        <ul id="horizontalList">
+            <li><a href="dogs.html"><input type="button" id ="Dogs" value = "Doges" class="buttonIndex" onclick=></a></li>
+            <li><input type="button" id="bookingButton" value="Bookings" class="buttonIndex"></li>
+            <li><a href="contact.html"><input type="button" id ="contactButton" value ="Map" class="buttonIndex"></a></li>
+            <li><input type="button" id="reviewsButton" value="Reviews" class="buttonIndex"></li>
+        </ul>
+    </div>
 </header>
 </body>
 </html>
