Assignment 1 Added map and added header and h2 to pages

--- a/admin.html
+++ b/admin.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Doge Rental Admin</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header class ="header2"></header>
+<a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
+<main>
+
+</main>
 
 </body>
 </html>
