--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Doge Rental Map</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="leaflet.css"/>
     <script src="leaflet.js"></script>
     <script src="map.js"></script>
 </head>
 <body>
+<header class ="header2"></header>
+<a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
 <main>
-    <h1>Yes</h1>
     <figure id='map'></figure>
 </main>
 </body>
