--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div id = "table">
         <ul id="horizontalList">
             <li><a href="dogs.html"><input type="button" id ="Dogs" value = "Doges" class="buttonIndex" onclick=></a></li>
-            <li><input type="button" id="bookingButton" value="Bookings" class="buttonIndex"></li>
+            <li><a href="bookings.html"><input type="button" id="bookingButton" value="Bookings" class="buttonIndex"></a></li>
             <li><a href="contact.html"><input type="button" id ="contactButton" value ="Map" class="buttonIndex"></a></li>
-            <li><input type="button" id="reviewsButton" value="Reviews" class="buttonIndex"></li>
+            <li><a href="reviews.html"><input type="button" id="reviewsButton" value="Reviews" class="buttonIndex"></a></li>
         </ul>
     </div>
 </header>
