--- a/dogs.html
+++ b/dogs.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Doge Rental Dogs</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="dogs.js"></script>
 </head>
 <body>
-<header class ="header2">
-    <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
-</header>
+<header class ="header2"></header>
+<a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
 <main id ="dogs">
 
 </main>
