Assignment 1 some website fixes

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,25 @@
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
 <main>
     <figure id='map'></figure>
+    <p>
+        This
+        </p>
+    <p>
+        Is
+        <p>
+    <p>
+        A
+</p>
+    <p>
+        Test
+        to
+        see
+        what
+        happens
+        when
+        i
+        scroll
+    </p>
 </main>
 </body>
 </html>
