Assignment 1 Added the dogs and images and made it possible to see a description of the dog by clicking header

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,15 @@
     <script src="map.js"></script>
 </head>
 <body>
-<header class ="header2"></header>
+<header class ="header2">
+    <ul>
+        <li><a href="index.html" class="headerA">Home</a><li>
+        <li><a href="dogs.html" class="headerA">Rent a Doge</a></li>
+        <li><a href="reviews.html" class="headerA">Reviews</a></li>
+        <li><a class="headerA">About us</a></li>
+
+    </ul>
+</header>
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
 <main>
     <figure id='map'></figure>
