--- a/dogs.html
+++ b/dogs.html
@@ -8,10 +8,102 @@
     <script src="dogs.js"></script>
 </head>
 <body>
-<header class ="header2"></header>
+<header class ="header2">
+     <ul>
+        <li><a href="index.html" class="headerA">Home</a><li>
+        <li><a class="headerA">Rent a Doge</a></li>
+        <li><a href="reviews.html" class="headerA">Reviews</a></li>
+        <li><a href="contact.html" class="headerA">About us</a></li>
+
+    </ul>
+</header>
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
 <main id ="dogs">
+    <table>
+        <tr>
+            <td><h4 class="title">Doge</h4>
+                <div class="flip-box">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="images/pexels-anna-shvets-4588001.jpg" alt="Doge">
+                        </div>
+                        <div class="card-back" id="Doge">
+                            <p class = "test">Doge</p>
+                            <p>Breed: Shiba Inu</p>
+                            <p>Size: Medium</p>
+                            <p>Invest in Dogecoin it's going to $100</p>
+                            <p>Price per hour $10</p>
+                        </div>
+                    </div>
+                </div>
+            </td>
 
+            <td><h4 class="title">Akira</h4>
+                <div class="flip-box">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="images/pexels-antonio-florentini-803766.jpg" alt="Husky">
+                        </div>
+                        <div class="card-back" id="Husky">
+
+                        </div>
+                    </div>
+                </div>
+            </td>
+
+            <td><h4 class="title">Ronnie</h4>
+                <div class="flip-box">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="images/pexels-vova-krasilnikov-4390802.jpg" alt="Rottweiler">
+                        </div>
+                        <div class="card-back" id="Ronnie">
+
+                        </div>
+                    </div>
+                </div>
+            </td>
+        </tr>
+
+        <tr>
+            <td><h4 class="title">Daisy</h4>
+                <div class="flip-box">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="images/pexels-goochie-poochie-grooming-3299899.jpg" alt="Poodle">
+                        </div>
+                        <div class="card-back" id="Poodle">
+
+                        </div>
+                    </div>
+                </div>
+            </td>
+
+            <td><h4 class="title">Ava</h4>
+                <div class="flip-box">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="images/pexels-suhail-suri-4381409.jpg" alt="Labrador">
+                        </div>
+                        <div class="card-back" id="Labrador">
+
+                        </div>
+                    </div>
+                </div></td>
+            <td><h4 class="title">Snoopy</h4>
+                <div class="flip-box">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <img src="images/pexels-anna-shvets-4588435.jpg" alt="Dachshund">
+                        </div>
+                        <div class="card-back" id="Dachshund">
+
+                        </div>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
 </main>
 </body>
 </html>
