--- a/reviews.html
+++ b/reviews.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class ="header2"></header>
+<header class ="header2">
+    <ul>
+        <li><a href="index.html" class="headerA">Home</a><li>
+        <li><a href="dogs.html" class="headerA">Rent a Doge</a></li>
+        <li><a class="headerA">Reviews</a></li>
+        <li><a href="contact.html" class="headerA">About us</a></li>
+
+    </ul>
+</header>
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
 <main>
 
