--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 <h1>Doge Rentals oo</h1>
 <h3>Admin</h3>
 <header>
-    <div id = "table">
+    <ul>
+        <li><a class="indexHeaderA">Home</a><li>
+        <li><a href="dogs.html" class="indexHeaderA">Rent a Doge</a></li>
+        <li><a href="reviews.html" class="indexHeaderA">Reviews</a></li>
+        <li><a href="contact.html" class="indexHeaderA">About us</a></li>
+
+    </ul>
+    <!--<div id = "table">
         <ul id="horizontalList">
-            <li><a href="dogs.html"><input type="button" id ="Dogs" value = "Doges" class="buttonIndex" onclick=></a></li>
-            <li><a href="bookings.html"><input type="button" id="bookingButton" value="Bookings" class="buttonIndex"></a></li>
-            <li><a href="contact.html"><input type="button" id ="contactButton" value ="Map" class="buttonIndex"></a></li>
-            <li><a href="reviews.html"><input type="button" id="reviewsButton" value="Reviews" class="buttonIndex"></a></li>
+            <li><a href="dogs.html"><input type="button" id ="Dogs" value = "Rent a Doge" class="buttonIndex"></a></li>
+            <li><a href="reviews.html"><input type="button" id="reviewsButton" value="  Reviews   " class="buttonIndex"></a></li>
+            <li><a href="contact.html"><input type="button" id ="contactButton" value =" About Us  " class="buttonIndex"></a></li>
         </ul>
-    </div>
+    </div>-->
 </header>
 </body>
 </html>
