Gave some styling to the dog names

--- a/dogs.html
+++ b/dogs.html
@@ -21,7 +21,7 @@
 <main id ="dogs">
     <table>
         <tr>
-            <td><h4 class="title">Doge</h4>
+            <td><h4 class="title" id="dog1">Doge</h4>
                 <div class="flip-box">
                     <div class="card-inner">
                         <div class="card-front">
@@ -38,7 +38,7 @@
                 </div>
             </td>
 
-            <td><h4 class="title">Akira</h4>
+            <td><h4 class="title" id="dog2">Akira</h4>
                 <div class="flip-box">
                     <div class="card-inner">
                         <div class="card-front">
@@ -51,7 +51,7 @@
                 </div>
             </td>
 
-            <td><h4 class="title">Ronnie</h4>
+            <td><h4 class="title" id="dog3">Ronnie</h4>
                 <div class="flip-box">
                     <div class="card-inner">
                         <div class="card-front">
@@ -66,7 +66,7 @@
         </tr>
 
         <tr>
-            <td><h4 class="title">Daisy</h4>
+            <td><h4 class="title" id="dog4">Daisy</h4>
                 <div class="flip-box">
                     <div class="card-inner">
                         <div class="card-front">
@@ -79,7 +79,7 @@
                 </div>
             </td>
 
-            <td><h4 class="title">Ava</h4>
+            <td><h4 class="title" id="dog5">Ava</h4>
                 <div class="flip-box">
                     <div class="card-inner">
                         <div class="card-front">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div></td>
-            <td><h4 class="title">Snoopy</h4>
+            <td><h4 class="title" id="dog6">Snoopy</h4>
                 <div class="flip-box">
                     <div class="card-inner">
                         <div class="card-front">
