Edited the about us page and added the reviews tp review page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="leaflet.js"></script>
     <script src="map.js"></script>
 </head>
-<body>
+<body id ='contactBody'>
 <header class ="header2">
     <ul>
         <li><a href="index.html" class="headerA">Home</a><li>
@@ -20,27 +20,15 @@
     </ul>
 </header>
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
-<main>
-    <figure id='map'></figure>
-    <p>
-        This
-        </p>
-    <p>
-        Is
-        <p>
-    <p>
-        A
-</p>
-    <p>
-        Test
-        to
-        see
-        what
-        happens
-        when
-        i
-        scroll
+<main id = "contactMain">
+    <p id="companyInfo">Welcome to Doge Rentals! We provide dogs for people to rent to fill that dog-shaped
+        void in their heart. We have multiple dogs available all with their own unique personality. We
+        have dogs that love to be taken on adventures, go to the dog park, or just be there on a
+        Saturday night for cuddles while watching Netflix. We are avid supporters of cryptocurrency and
+        only accept payment in dogecoin. Our office is located at (add address here) come on over for a
+        chat one time!
     </p>
+    <figure id='map'></figure>
 </main>
 </body>
 </html>
