--- a/dogs.html
+++ b/dogs.html
@@ -31,6 +31,7 @@
                         </div>
                     </div>
                 </div>
+                <input type="button" value="Book Me!" class="bookingButton">
             </td>
 
             <td><h4 class="title" id="dog2">Akira</h4>
@@ -40,10 +41,10 @@
                             <img src="images/pexels-antonio-florentini-803766.jpg" alt="Husky">
                         </div>
                         <div class="card-back" id="Husky">
-
                         </div>
                     </div>
                 </div>
+                <input type="button" value="Book Me!" class="bookingButton">
             </td>
 
             <td><h4 class="title" id="dog3">Ronnie</h4>
@@ -53,10 +54,10 @@
                             <img src="images/pexels-vova-krasilnikov-4390802.jpg" alt="Rottweiler">
                         </div>
                         <div class="card-back" id="Ronnie">
-
                         </div>
                     </div>
                 </div>
+                <input type="button" value="Book Me!" class="bookingButton">
             </td>
         </tr>
 
@@ -68,10 +69,10 @@
                             <img src="images/pexels-goochie-poochie-grooming-3299899.jpg" alt="Poodle">
                         </div>
                         <div class="card-back" id="Poodle">
-
                         </div>
                     </div>
                 </div>
+                <input type="button" value="Book Me!" class="bookingButton">
             </td>
 
             <td><h4 class="title" id="dog5">Ava</h4>
@@ -81,10 +82,11 @@
                             <img src="images/pexels-suhail-suri-4381409.jpg" alt="Labrador">
                         </div>
                         <div class="card-back" id="Labrador">
-
                         </div>
                     </div>
-                </div></td>
+                </div>
+                <input type="button" value="Book Me!" class="bookingButton">
+            </td>
             <td><h4 class="title" id="dog6">Snoopy</h4>
                 <div class="flip-box">
                     <div class="card-inner">
@@ -92,10 +94,10 @@
                             <img src="images/pexels-anna-shvets-4588435.jpg" alt="Dachshund">
                         </div>
                         <div class="card-back" id="Dachshund">
-
                         </div>
                     </div>
                 </div>
+                <input type="button" value="Book Me!" class="bookingButton">
             </td>
         </tr>
     </table>
