Changed some styling for reviews page and about us page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="body">
 <a href="admin.html"><img src="images/image%20(1).jpg" alt="adminAvatar" id="adminAvatar"></a>
 <h1>Doge Rentals oo</h1>
-<h3>Admin</h3>
+<h3 id="adminHeader">Admin</h3>
 <header>
     <ul>
         <li><a class="indexHeaderA">Home</a><li>
