Finished Contact map markers show/hide

--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,13 @@
         void in their heart. We have multiple dogs available all with their own unique personality. We
         have dogs that love to be taken on adventures, go to the dog park, or just be there on a
         Saturday night for cuddles while watching Netflix. We are avid supporters of cryptocurrency and
-        only accept payment in dogecoin. Our office is located at (add address here) come on over for a
-        chat one time!
+        only accept payment in dogecoin. Our office is located at in Waverly (see map below) come over
+        for a chat one time!
     </p>
+    <h3 class = 'contact-header'>Locations</h3>
     <figure id='map'></figure>
+    <input type="button" value="Hide Parks" class="contact-button" id="parkButton">
+    <input type="button" value="Hide Tracks" class ='contact-button' id="trackButton">
 </main>
 </body>
 </html>
