Edited the about us page about the company information

--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
     <p id="companyInfo">Welcome to Doge Rentals! We provide dogs for people to rent to fill that dog-shaped
         void in their heart. We have multiple dogs available all with their own unique personality. We
         have dogs that love to be taken on adventures, go to the dog park, or just be there on a
-        Saturday night for cuddles while watching Netflix. We are avid supporters of cryptocurrency and
-        only accept payment in dogecoin. Our office is located at in Waverly (see map below) come over
+        Saturday night to watch Netflix. We are avid supporters of cryptocurrency and
+        only accept payment in dogecoin. Our office is located in Waverly (see map below) come over
         for a chat one time!
     </p>
     <h3 class = 'contact-header'>Locations</h3>
