Booking added dog images when selecting dogs so you can see what dogs you have selected.

--- a/dogs.html
+++ b/dogs.html
@@ -102,12 +102,20 @@
             </td>
         </tr>
     </table>
+    <div id="bookingForm" style="display: none">
+        <h3 class="review-header">You picked:</h3>
+        <table id="table2">
+            <tr id="imageTable">
+            </tr>
+        </table>
+
+    </div>
 </main>
 <div id="customAlert" style="display: none">
     <div id="box">
-        <div id="heading">A mesage from Doge Rentals</div>
+        <div id="heading">A message from Doge Rentals</div>
         <div id="content">
-            <p>You can only book three dogs at a time</p>
+            <p>You can only book a maximum of three dogs at a time.</p>
             <input type="button" id="closeButton" value="Ok">
         </div>
     </div>
