Finished Booking Dogs form submit and cancelling booking

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
         void in their heart. We have multiple dogs available all with their own unique personality. We
         have dogs that love to be taken on adventures, go to the dog park, or just be there on a
         Saturday night to watch Netflix. We are avid supporters of cryptocurrency and
-        only accept payment in dogecoin. Our office is located in Waverly (see map below) come over
-        for a chat one time!
+        only accept payment in dogecoin. Our store hours are 9am-9pm and our office is located in Waverly
+        (see map below) come over for a chat one time!
     </p>
     <h3 class = 'contact-header'>Locations</h3>
     <figure id='map'></figure>
