--- a/dogs.html
+++ b/dogs.html
@@ -7,6 +7,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="dogs.js"></script>
     <script src="booking.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="formValidate.js"></script>
 </head>
 <body>
 <header class ="header2">
@@ -108,9 +112,106 @@
             <tr id="imageTable">
             </tr>
         </table>
+        <form novalidate id="bookingInfo">
+            <fieldset>
+                <legend>Booking Details:</legend>
+                <p>
+                    <label for="name">Please enter your name:</label>
+                    <input type="text" name="name" id="name" required>
+                </p>
+                <p>Date: <input type="text" name="datepicker" id="datepicker" required></p>
+                <p>
+                    <label for="pickupTime">Time of pickup: </label>
+                    <select name="pickupTime" id="pickupTime">
+                        <option value="9">9 am</option>
+                        <option value="10">10 am</option>
+                        <option value="11">11 am</option>
+                        <option value="12">12 pm</option>
+                        <option value="13">1 pm</option>
+                        <option value="14">2 pm</option>
+                        <option value="15">3 pm</option>
+                        <option value="16">4 pm</option>
+                        <option value="17">5 pm</option>
+                        <option value="18">6 pm</option>
+                        <option value="19">7 pm</option>
+                        <option value="20">8 pm</option>
+                    </select>
+                </p>
+                <p>
+                    <label for="numHours">Number of hours:</label>
+                    <select name="numHours" id="numHours">
+                        <option value="1">1 hour</option>
+                        <option value="2">2 hours</option>
+                        <option value="3">3 hours</option>
+                        <option value="4">4 hours</option>
+                        <option value="5">5 hours</option>
+                        <option value="6">6 hours</option>
+                        <option value="7">7 hours</option>
+                        <option value="8">8 hours</option>
+                        <option value="9">9 hours</option>
+                        <option value="10">10 hours</option>
+                        <option value="11">11 hours</option>
+                        <option value="12">12 hours</option>
+                    </select>
+                </p>
+                <p style="font-size: 16px">Please note: You must return dogs by 9pm the same day.</p>
+            </fieldset>
 
+            <!-- Next section has credit card details -->
+            <fieldset>
+                <legend>Payment Details:</legend>
+                <p>
+                    <label for="cardType">Card type:</label>
+                    <select name="cardType" id="cardType">
+                        <option value="amex">American Express</option>
+                        <option value="mcard">Master Card</option>
+                        <option value="visa">Visa</option>
+                    </select>
+                </p>
+                <p>
+                    <label for="cardNumber">Card number:</label>
+                    <input type="text" name="cardNumber" id="cardNumber" maxlength="16" required>
+                </p>
+                <p>
+                    <label for="cardMonth">Expiry date:</label>
+                    <select name="cardMonth" id="cardMonth">
+                        <option value="1">01</option>
+                        <option value="2">02</option>
+                        <option value="3">03</option>
+                        <option value="4">04</option>
+                        <option value="5">05</option>
+                        <option value="6">06</option>
+                        <option value="7">07</option>
+                        <option value="8">08</option>
+                        <option value="9">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                    </select>
+                    <select name="cardYear" id="cardYear">
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
+                        <option value="2016">2016</option>
+                        <option value="2017">2017</option>
+                        <option value="2018">2018</option>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                    </select>
+                </p>
+                <p>
+                    <label for="cardValidation">CVC:</label>
+                    <input type="text" class="short" maxlength="4" name="cardValidation" id="cardValidation" required>
+                </p>
+            </fieldset>
+            <input type="button" value="Cancel Booking" id="cancelButton">
+            <input type="submit">
+        </form>
+        <ul id="bookingError" style="color: red">
+        </ul>
     </div>
 </main>
+
 <div id="customAlert" style="display: none">
     <div id="box">
         <div id="heading">A message from Doge Rentals</div>
