Finished The final booking process and admin page

--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Doge Rental Admin</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="admin.js"></script>
 </head>
 <body>
 <header class ="header2">
@@ -16,7 +18,7 @@
     </ul>
 </header>
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
-<main>
+<main id="adminMain">
 
 </main>
 
