--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,10 @@
     </p>
     <h3 class = 'contact-header'>Locations</h3>
     <figure id='map'></figure>
-    <input type="button" value="Hide Parks" class="contact-button" id="parkButton">
-    <input type="button" value="Hide Tracks" class ='contact-button' id="trackButton">
+    <div>
+        <input type="button" value="Hide Parks" class="contact-button" id="parkButton">
+        <input type="button" value="Hide Tracks" class ='contact-button' id="trackButton">
+    </div>
 </main>
 </body>
 </html>
