--- a/dogs.html
+++ b/dogs.html
@@ -107,7 +107,7 @@
         </tr>
     </table>
     <div id="bookingForm" style="display: none">
-        <h3 class="review-header">You picked:</h3>
+        <h3 class="review-header" style="text-align: left">You picked:</h3>
         <table id="table2">
             <tr id="imageTable">
             </tr>
@@ -221,5 +221,6 @@
         </div>
     </div>
 </div>
+<p id="bookingSuccess" style="color: green; display: none; text-align: center; margin-top: 200px; font-size: 40px">Thank you for booking with us :)</p>
 </body>
 </html>
