Final - added Comments to code

--- a/dogs.html
+++ b/dogs.html
@@ -38,7 +38,6 @@
                 </div>
                 <input type="button" value="Book Me!" class="bookingButton">
             </td>
-
             <td><h4 class="title" id="dog2">Akira</h4>
                 <div class="flip-box">
                     <div class="card-inner">
@@ -51,7 +50,6 @@
                 </div>
                 <input type="button" value="Book Me!" class="bookingButton">
             </td>
-
             <td><h4 class="title" id="dog3">Ronnie</h4>
                 <div class="flip-box">
                     <div class="card-inner">
@@ -65,7 +63,6 @@
                 <input type="button" value="Book Me!" class="bookingButton">
             </td>
         </tr>
-
         <tr>
             <td><h4 class="title" id="dog4">Daisy</h4>
                 <div class="flip-box">
@@ -79,7 +76,6 @@
                 </div>
                 <input type="button" value="Book Me!" class="bookingButton">
             </td>
-
             <td><h4 class="title" id="dog5">Ava</h4>
                 <div class="flip-box">
                     <div class="card-inner">
@@ -113,6 +109,7 @@
             </tr>
         </table>
         <form novalidate id="bookingInfo">
+            <!--Booking info details -->
             <fieldset>
                 <legend>Booking Details:</legend>
                 <p>
@@ -157,7 +154,7 @@
                 <p style="font-size: 16px">Please note: You must return dogs by 9pm the same day.</p>
             </fieldset>
 
-            <!-- Next section has credit card details -->
+            <!--credit card details -->
             <fieldset>
                 <legend>Payment Details:</legend>
                 <p>
@@ -211,7 +208,6 @@
         </ul>
     </div>
 </main>
-
 <div id="customAlert" style="display: none">
     <div id="box">
         <div id="heading">A message from Doge Rentals</div>
