--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,6 @@
         <li><a href="dogs.html" class="headerA">Rent a Doge</a></li>
         <li><a href="reviews.html" class="headerA">Reviews</a></li>
         <li><a class="headerA">About us</a></li>
-
     </ul>
 </header>
 <a href="index.html" class="ah2"> <h2>Doge rentals oo</h2></a>
@@ -30,7 +29,7 @@
     </p>
     <h3 class = 'contact-header'>Locations</h3>
     <figure id='map'></figure>
-    <div>
+    <div id="contactDiv">
         <input type="button" value="Hide Parks" class="contact-button" id="parkButton">
         <input type="button" value="Hide Tracks" class ='contact-button' id="trackButton">
     </div>
